Revert "[TT-499][Store Pickup] Fixes shadows on mobiles for creativeshop"
This reverts commit 1c0c400091cfab221977eeb91cf6af5b06f6c504

--- a/src/components/checkout/checkout.scss
+++ b/src/components/checkout/checkout.scss
@@ -466,10 +466,8 @@ $checkout_store-pickup-selected-location_button-type: $button_default-type !defa
         }
     }
 
-    #store-pickup ~ #shipping #{$root}__shipping-method-wrapper,
     #store-selector {
         padding: $checkout_base-space;
-        box-shadow: $checkout_boxes-box-shadow;
 
         @include media('>=tablet') {
             box-shadow: none;
